internal/db/sqlengine/antlr/sql_parser.go
// Code generated from SQLParser.g4 by ANTLR 4.13.1. DO NOT EDIT.

package antlr // SQLParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SQLParser struct {
	*antlr.BaseParser
}

var SQLParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sqlparserParserInit() {
	staticData := &SQLParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'OR'", "'AND'", "'NOT'", "'IN'", "'CONTAIN_ALL'", "'CONTAIN_ANY'",
		"'BETWEEN'", "'LIKE'", "'WHERE'", "'SELECT'", "'FROM'", "'AS'", "'BY'",
		"'ORDER'", "'ASC'", "'DESC'", "'LIMIT'", "'TRUE'", "'FALSE'", "'IS'",
		"'NULL'", "", "", "", "", "'('", "')'", "'['", "']'", "','", "'<='",
		"'>='", "'!='", "'<'", "'>'", "'='", "'-'", "'_'",
	}
	staticData.SymbolicNames = []string{
		"", "OR", "AND", "NOT", "IN", "CONTAIN_ALL", "CONTAIN_ANY", "BETWEEN",
		"LIKE", "WHERE", "SELECT", "FROM", "AS", "BY", "ORDER", "ASC", "DESC",
		"LIMIT", "TRUE_V", "FALSE_V", "IS", "NULL_V", "INTEGER", "FLOAT", "SQUOTA_STRING",
		"DQUOTA_STRING", "LP", "RP", "LMP", "RMP", "COMMA", "LE_OP", "GE_OP",
		"NE_OP", "L_OP", "G_OP", "E_OP", "MINUS_SIGN", "UNDERSCORE", "SPACES",
		"SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "REGULAR_ID",
	}
	staticData.RuleNames = []string{
		"logic_expr_unit", "logic_expr", "or_expr", "and_expr", "primary_expr",
		"relation_expr", "rel_oper", "value_expr", "in_value_expr_list", "in_value_expr",
		"constant", "vector_expr", "vector", "function_value_expr", "function_call",
		"numeric", "quoted_string", "bool_value", "identifier",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SQLParserInit initializes any static state used to implement SQLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSQLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SQLParserInit() {
	staticData := &SQLParserParserStaticData
	staticData.once.Do(sqlparserParserInit)
}

// NewSQLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSQLParser(input antlr.TokenStream) *SQLParser {
	SQLParserInit()
	this := new(SQLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SQLParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "SQLParser.g4"

	return this
}

// SQLParser tokens.
const (
	SQLParserEOF                 = antlr.TokenEOF
	SQLParserOR                  = 1
	SQLParserAND                 = 2
	SQLParserNOT                 = 3
	SQLParserIN                  = 4
	SQLParserCONTAIN_ALL         = 5
	SQLParserCONTAIN_ANY         = 6
	SQLParserBETWEEN             = 7
	SQLParserLIKE                = 8
	SQLParserWHERE               = 9
	SQLParserSELECT              = 10
	SQLParserFROM                = 11
	SQLParserAS                  = 12
	SQLParserBY                  = 13
	SQLParserORDER               = 14
	SQLParserASC                 = 15
	SQLParserDESC                = 16
	SQLParserLIMIT               = 17
	SQLParserTRUE_V              = 18
	SQLParserFALSE_V             = 19
	SQLParserIS                  = 20
	SQLParserNULL_V              = 21
	SQLParserINTEGER             = 22
	SQLParserFLOAT               = 23
	SQLParserSQUOTA_STRING       = 24
	SQLParserDQUOTA_STRING       = 25
	SQLParserLP                  = 26
	SQLParserRP                  = 27
	SQLParserLMP                 = 28
	SQLParserRMP                 = 29
	SQLParserCOMMA               = 30
	SQLParserLE_OP               = 31
	SQLParserGE_OP               = 32
	SQLParserNE_OP               = 33
	SQLParserL_OP                = 34
	SQLParserG_OP                = 35
	SQLParserE_OP                = 36
	SQLParserMINUS_SIGN          = 37
	SQLParserUNDERSCORE          = 38
	SQLParserSPACES              = 39
	SQLParserSINGLE_LINE_COMMENT = 40
	SQLParserMULTI_LINE_COMMENT  = 41
	SQLParserREGULAR_ID          = 42
)

// SQLParser rules.
const (
	SQLParserRULE_logic_expr_unit     = 0
	SQLParserRULE_logic_expr          = 1
	SQLParserRULE_or_expr             = 2
	SQLParserRULE_and_expr            = 3
	SQLParserRULE_primary_expr        = 4
	SQLParserRULE_relation_expr       = 5
	SQLParserRULE_rel_oper            = 6
	SQLParserRULE_value_expr          = 7
	SQLParserRULE_in_value_expr_list  = 8
	SQLParserRULE_in_value_expr       = 9
	SQLParserRULE_constant            = 10
	SQLParserRULE_vector_expr         = 11
	SQLParserRULE_vector              = 12
	SQLParserRULE_function_value_expr = 13
	SQLParserRULE_function_call       = 14
	SQLParserRULE_numeric             = 15
	SQLParserRULE_quoted_string       = 16
	SQLParserRULE_bool_value          = 17
	SQLParserRULE_identifier          = 18
)

// ILogic_expr_unitContext is an interface to support dynamic dispatch.
type ILogic_expr_unitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Logic_expr() ILogic_exprContext
	EOF() antlr.TerminalNode

	// IsLogic_expr_unitContext differentiates from other interfaces.
	IsLogic_expr_unitContext()
}

type Logic_expr_unitContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLogic_expr_unitContext() *Logic_expr_unitContext {
	var p = new(Logic_expr_unitContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_logic_expr_unit
	return p
}

func InitEmptyLogic_expr_unitContext(p *Logic_expr_unitContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_logic_expr_unit
}

func (*Logic_expr_unitContext) IsLogic_expr_unitContext() {}

func NewLogic_expr_unitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Logic_expr_unitContext {
	var p = new(Logic_expr_unitContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_logic_expr_unit

	return p
}

func (s *Logic_expr_unitContext) GetParser() antlr.Parser { return s.parser }

func (s *Logic_expr_unitContext) Logic_expr() ILogic_exprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILogic_exprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILogic_exprContext)
}

func (s *Logic_expr_unitContext) EOF() antlr.TerminalNode {
	return s.GetToken(SQLParserEOF, 0)
}

func (s *Logic_expr_unitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Logic_expr_unitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SQLParser) Logic_expr_unit() (localctx ILogic_expr_unitContext) {
	localctx = NewLogic_expr_unitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SQLParserRULE_logic_expr_unit)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Logic_expr()
	}
	{
		p.SetState(39)
		p.Match(SQLParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// ILogic_exprContext is an interface to support dynamic dispatch.
type ILogic_exprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Or_expr() IOr_exprContext

	// IsLogic_exprContext differentiates from other interfaces.
	IsLogic_exprContext()
}

type Logic_exprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLogic_exprContext() *Logic_exprContext {
	var p = new(Logic_exprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_logic_expr
	return p
}

func InitEmptyLogic_exprContext(p *Logic_exprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_logic_expr
}

func (*Logic_exprContext) IsLogic_exprContext() {}

func NewLogic_exprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Logic_exprContext {
	var p = new(Logic_exprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_logic_expr

	return p
}

func (s *Logic_exprContext) GetParser() antlr.Parser { return s.parser }

func (s *Logic_exprContext) Or_expr() IOr_exprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOr_exprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOr_exprContext)
}

func (s *Logic_exprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Logic_exprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SQLParser) Logic_expr() (localctx ILogic_exprContext) {
	localctx = NewLogic_exprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SQLParserRULE_logic_expr)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(41)
		p.Or_expr()
	}

	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IOr_exprContext is an interface to support dynamic dispatch.
type IOr_exprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllAnd_expr() []IAnd_exprContext
	And_expr(i int) IAnd_exprContext
	AllOR() []antlr.TerminalNode
	OR(i int) antlr.TerminalNode

	// IsOr_exprContext differentiates from other interfaces.
	IsOr_exprContext()
}

type Or_exprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOr_exprContext() *Or_exprContext {
	var p = new(Or_exprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_or_expr
	return p
}

func InitEmptyOr_exprContext(p *Or_exprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_or_expr
}

func (*Or_exprContext) IsOr_exprContext() {}

func NewOr_exprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Or_exprContext {
	var p = new(Or_exprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_or_expr

	return p
}

func (s *Or_exprContext) GetParser() antlr.Parser { return s.parser }

func (s *Or_exprContext) AllAnd_expr() []IAnd_exprContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAnd_exprContext); ok {
			len++
		}
	}

	tst := make([]IAnd_exprContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAnd_exprContext); ok {
			tst[i] = t.(IAnd_exprContext)
			i++
		}
	}

	return tst
}

func (s *Or_exprContext) And_expr(i int) IAnd_exprContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAnd_exprContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAnd_exprContext)
}

func (s *Or_exprContext) AllOR() []antlr.TerminalNode {
	return s.GetTokens(SQLParserOR)
}

func (s *Or_exprContext) OR(i int) antlr.TerminalNode {
	return s.GetToken(SQLParserOR, i)
}

func (s *Or_exprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Or_exprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SQLParser) Or_expr() (localctx IOr_exprContext) {
	localctx = NewOr_exprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SQLParserRULE_or_expr)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		p.And_expr()
	}
	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == SQLParserOR {
		{
			p.SetState(44)
			p.Match(SQLParserOR)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(45)
			p.And_expr()
		}

		p.SetState(50)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IAnd_exprContext is an interface to support dynamic dispatch.
type IAnd_exprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllPrimary_expr() []IPrimary_exprContext
	Primary_expr(i int) IPrimary_exprContext
	AllAND() []antlr.TerminalNode
	AND(i int) antlr.TerminalNode

	// IsAnd_exprContext differentiates from other interfaces.
	IsAnd_exprContext()
}

type And_exprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAnd_exprContext() *And_exprContext {
	var p = new(And_exprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_and_expr
	return p
}

func InitEmptyAnd_exprContext(p *And_exprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_and_expr
}

func (*And_exprContext) IsAnd_exprContext() {}

func NewAnd_exprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *And_exprContext {
	var p = new(And_exprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_and_expr

	return p
}

func (s *And_exprContext) GetParser() antlr.Parser { return s.parser }

func (s *And_exprContext) AllPrimary_expr() []IPrimary_exprContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPrimary_exprContext); ok {
			len++
		}
	}

	tst := make([]IPrimary_exprContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPrimary_exprContext); ok {
			tst[i] = t.(IPrimary_exprContext)
			i++
		}
	}

	return tst
}

func (s *And_exprContext) Primary_expr(i int) IPrimary_exprContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrimary_exprContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrimary_exprContext)
}

func (s *And_exprContext) AllAND() []antlr.TerminalNode {
	return s.GetTokens(SQLParserAND)
}

func (s *And_exprContext) AND(i int) antlr.TerminalNode {
	return s.GetToken(SQLParserAND, i)
}

func (s *And_exprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *And_exprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SQLParser) And_expr() (localctx IAnd_exprContext) {
	localctx = NewAnd_exprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SQLParserRULE_and_expr)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Primary_expr()
	}
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == SQLParserAND {
		{
			p.SetState(52)
			p.Match(SQLParserAND)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(53)
			p.Primary_expr()
		}

		p.SetState(58)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IPrimary_exprContext is an interface to support dynamic dispatch.
type IPrimary_exprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Relation_expr() IRelation_exprContext
	LP() antlr.TerminalNode
	Logic_expr() ILogic_exprContext
	RP() antlr.TerminalNode

	// IsPrimary_exprContext differentiates from other interfaces.
	IsPrimary_exprContext()
}

type Primary_exprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPrimary_exprContext() *Primary_exprContext {
	var p = new(Primary_exprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_primary_expr
	return p
}

func InitEmptyPrimary_exprContext(p *Primary_exprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_primary_expr
}

func (*Primary_exprContext) IsPrimary_exprContext() {}

func NewPrimary_exprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Primary_exprContext {
	var p = new(Primary_exprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_primary_expr

	return p
}

func (s *Primary_exprContext) GetParser() antlr.Parser { return s.parser }

func (s *Primary_exprContext) Relation_expr() IRelation_exprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelation_exprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelation_exprContext)
}

func (s *Primary_exprContext) LP() antlr.TerminalNode {
	return s.GetToken(SQLParserLP, 0)
}

func (s *Primary_exprContext) Logic_expr() ILogic_exprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILogic_exprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILogic_exprContext)
}

func (s *Primary_exprContext) RP() antlr.TerminalNode {
	return s.GetToken(SQLParserRP, 0)
}

func (s *Primary_exprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Primary_exprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SQLParser) Primary_expr() (localctx IPrimary_exprContext) {
	localctx = NewPrimary_exprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SQLParserRULE_primary_expr)
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case SQLParserOR, SQLParserAND, SQLParserNOT, SQLParserIN, SQLParserBETWEEN, SQLParserLIKE, SQLParserWHERE, SQLParserSELECT, SQLParserAS, SQLParserBY, SQLParserORDER, SQLParserASC, SQLParserDESC, SQLParserLIMIT, SQLParserREGULAR_ID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(59)
			p.Relation_expr()
		}

	case SQLParserLP:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(60)
			p.Match(SQLParserLP)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(61)
			p.Logic_expr()
		}
		{
			p.SetState(62)
			p.Match(SQLParserRP)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
}

// IRelation_exprContext is an interface to support dynamic dispatch.
type IRelation_exprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Identifier() IIdentifierContext
	Rel_oper() IRel_operContext
	Value_expr() IValue_exprContext
	LIKE() antlr.TerminalNode
	IN() antlr.TerminalNode
	LP() antlr.TerminalNode
	In_value_expr_list() IIn_value_expr_listContext
	RP() antlr.TerminalNode
	NOT() antlr.TerminalNode
	CONTAIN_ALL() antlr.TerminalNode
	CONTAIN_ANY() antlr.TerminalNode
	IS() antlr.TerminalNode
	NULL_V() antlr.TerminalNode
	Function_call() IFunction_callContext

	// IsRelation_exprContext differentiates from other interfaces.
	IsRelation_exprContext()
}

type Relation_exprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRelation_exprContext() *Relation_exprContext {
	var p = new(Relation_exprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_relation_expr
	return p
}

func InitEmptyRelation_exprContext(p *Relation_exprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_relation_expr
}

func (*Relation_exprContext) IsRelation_exprContext() {}

func NewRelation_exprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Relation_exprContext {
	var p = new(Relation_exprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_relation_expr

	return p
}

func (s *Relation_exprContext) GetParser() antlr.Parser { return s.parser }

func (s *Relation_exprContext) Identifier() IIdentifierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIdentifierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIdentifierContext)
}

func (s *Relation_exprContext) Rel_oper() IRel_operContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRel_operContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRel_operContext)
}

func (s *Relation_exprContext) Value_expr() IValue_exprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValue_exprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValue_exprContext)
}

func (s *Relation_exprContext) LIKE() antlr.TerminalNode {
	return s.GetToken(SQLParserLIKE, 0)
}

func (s *Relation_exprContext) IN() antlr.TerminalNode {
	return s.GetToken(SQLParserIN, 0)
}

func (s *Relation_exprContext) LP() antlr.TerminalNode {
	return s.GetToken(SQLParserLP, 0)
}

func (s *Relation_exprContext) In_value_expr_list() IIn_value_expr_listContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIn_value_expr_listContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIn_value_expr_listContext)
}

func (s *Relation_exprContext) RP() antlr.TerminalNode {
	return s.GetToken(SQLParserRP, 0)
}

func (s *Relation_exprContext) NOT() antlr.TerminalNode {
	return s.GetToken(SQLParserNOT, 0)
}

func (s *Relation_exprContext) CONTAIN_ALL() antlr.TerminalNode {
	return s.GetToken(SQLParserCONTAIN_ALL, 0)
}

func (s *Relation_exprContext) CONTAIN_ANY() antlr.TerminalNode {
	return s.GetToken(SQLParserCONTAIN_ANY, 0)
}

func (s *Relation_exprContext) IS() antlr.TerminalNode {
	return s.GetToken(SQLParserIS, 0)
}

func (s *Relation_exprContext) NULL_V() antlr.TerminalNode {
	return s.GetToken(SQLParserNULL_V, 0)
}

func (s *Relation_exprContext) Function_call() IFunction_callContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunction_callContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunction_callContext)
}

func (s *Relation_exprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Relation_exprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SQLParser) Relation_expr() (localctx IRelation_exprContext) {
	localctx = NewRelation_exprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, SQLParserRULE_relation_expr)
	var _la int

	p.SetState(105)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 7, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(66)
			p.Identifier()
		}
		{
			p.SetState(67)
			p.Rel_oper()
		}
		{
			p.SetState(68)
			p.Value_expr()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(70)
			p.Identifier()
		}
		{
			p.SetState(71)
			p.Match(SQLParserLIKE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(72)
			p.Value_expr()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(74)
			p.Identifier()
		}
		p.SetState(76)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == SQLParserNOT {
			{
				p.SetState(75)
				p.Match(SQLParserNOT)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}
